Get the PID3 working in auton and driver

--- a/regional test code/README
+++ b/regional test code/README
@@ -1,1 +1,2 @@
-A_Ramp_IR.c - Working on putting IR arm out
+ramp_long_servo_2.c - Turn left to drive up the ramp. Uses servo arm.
+driver-light_smux.c - Driver code.
